@@ -475,6 +475,22 @@ impl SerialPort for COMPort {
             }
         }
     }
+
+    fn set_break(&self) -> Result<()> {
+        if unsafe { SetCommBreak(self.handle) != 0 } {
+            Ok(())
+        } else {
+            Err(super::error::last_os_error())
+        }
+    }
+
+    fn clear_break(&self) -> Result<()> {
+        if unsafe { ClearCommBreak(self.handle) != 0 } {
+            Ok(())
+        } else {
+            Err(super::error::last_os_error())
+        }
+    }
 }
 
 // According to the MSDN docs, we should use SetupDiGetClassDevs, SetupDiEnumDeviceInfo
